# binance_trading_bot

./: btc_trading.py  indicators_analysis.ipynb  pyproject.toml
